JDK 25 compliance